include_directories(../src)
link_directories(${CMAKE_CURRENT_BINARY_DIR}/../src)

file(GLOB TESTS "test_*.c")
foreach(T_FILE ${TESTS})
  get_filename_component(T_NAME ${T_FILE} NAME)
  add_executable(${T_NAME} ${T_FILE})
  target_link_libraries(${T_NAME} movistartv core bstrlib ${THIRDPARTY_LIBRARIES} -lpthread)
  add_test(NAME ${T_NAME} COMMAND ${T_NAME})
endforeach(T_FILE ${TESTS})
